wk_taa_taaqa/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Account Data Requests</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved - Completed</fullName>
        </values>
        <values>
            <fullName>Approved - Update Scheduled</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ready to Process</fullName>
        </values>
        <values>
            <fullName>Recalled</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Coordinators</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unresolved</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Opportunity Quick Create</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Duplicate - Assisting another ISC</fullName>
        </values>
        <values>
            <fullName>Incorrect Usage - Duplicate</fullName>
        </values>
        <values>
            <fullName>Incorrect Usage - Duplicate - Existing Customer Account</fullName>
        </values>
        <values>
            <fullName>Incorrect Usage - Duplicate - Prospect</fullName>
        </values>
        <values>
            <fullName>Incorrect Usage - No immediate quote%2Fproposal</fullName>
        </values>
        <values>
            <fullName>Incorrect Usage - not TaxWise</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Validated</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Cancellation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancellation Created</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted For Approval</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Ops Projects</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Started</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unresolved</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales411</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unresolved</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unresolved</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AMS_Account_Grouping__c</fullName>
        <formula>PFX_Account_Number__r.AMS_Acct_Grouping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Account Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Added_Products__c</fullName>
        <label>AMS Added Products</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMS_Cancellation_Type__c</fullName>
        <label>AMS Cancellation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMS_Cancelled_Products__c</fullName>
        <label>AMS Cancelled Products</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_Selection__c</fullName>
        <label>Acknowledgement Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Comments__c</fullName>
        <inlineHelpText>Admin use only - admin will provide details on request status, and details on action taken if approved/reason rejected if not approved.</inlineHelpText>
        <label>Admin Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corporate Direct (STG)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Corporate Indirect (STG)</fullName>
                </value>
                <value>
                    <fullName>R&amp;L</fullName>
                </value>
                <value>
                    <fullName>Software (Corporate)</fullName>
                </value>
                <value>
                    <fullName>Software (Med &amp; Large)</fullName>
                </value>
                <value>
                    <fullName>US Small Firms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQ_System__c</fullName>
        <formula>TEXT(Opportunity__r.CPQ_Quote__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelInstrs__c</fullName>
        <formula>&quot;ex.772026 - Additional Portals - 5.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Amount__c</fullName>
        <label>Cancellation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Components__c</fullName>
        <label>Cancellation Components</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Licenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aspen unpaid book cancel</fullName>
                </value>
                <value>
                    <fullName>Change effective dates</fullName>
                </value>
                <value>
                    <fullName>Change in business - Bankrupt</fullName>
                </value>
                <value>
                    <fullName>Change in business - Budget cuts</fullName>
                </value>
                <value>
                    <fullName>Change in business - Business focus change</fullName>
                </value>
                <value>
                    <fullName>Change in business - Personnel change</fullName>
                </value>
                <value>
                    <fullName>Change in business - Went out of business</fullName>
                </value>
                <value>
                    <fullName>Conversion - Step Down</fullName>
                </value>
                <value>
                    <fullName>Conversion - Step Over</fullName>
                </value>
                <value>
                    <fullName>Conversion - Step Up</fullName>
                </value>
                <value>
                    <fullName>Correct order entry error</fullName>
                </value>
                <value>
                    <fullName>Credit dept cancel</fullName>
                </value>
                <value>
                    <fullName>Current Ancillary Product Cancellation</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Did not renew - Unknown reason</fullName>
                </value>
                <value>
                    <fullName>Insufficient use - Doesn&apos;t warrant product cost</fullName>
                </value>
                <value>
                    <fullName>Never received - Disputed signature</fullName>
                </value>
                <value>
                    <fullName>Never received - No signature</fullName>
                </value>
                <value>
                    <fullName>Never received - No tracking available</fullName>
                </value>
                <value>
                    <fullName>No reason given - Third party</fullName>
                </value>
                <value>
                    <fullName>No reason given - Unwilling to provide reason</fullName>
                </value>
                <value>
                    <fullName>Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Per Aspen monthly file</fullName>
                </value>
                <value>
                    <fullName>Placement - Collections</fullName>
                </value>
                <value>
                    <fullName>Price correction</fullName>
                </value>
                <value>
                    <fullName>Product discontinued</fullName>
                </value>
                <value>
                    <fullName>Product returned - Customer called within 30 days</fullName>
                </value>
                <value>
                    <fullName>Product returned - Damaged</fullName>
                </value>
                <value>
                    <fullName>Product returned marked &quot;cancel&quot;</fullName>
                </value>
                <value>
                    <fullName>Product returned - Overstock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>IF(IsClosed,
ROUND( 8 * (
   ( 5 * FLOOR( ( DATEVALUE( ClosedDate ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( ClosedDate ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( ClosedDate - DATETIMEVALUE( &apos;1900-01-08 10:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 10:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 ),
ROUND( 8 * (
   ( 5 * FLOOR( ( DATEVALUE( NOW() ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( NOW() ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( NOW() - DATETIMEVALUE( &apos;1900-01-08 10:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 10:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner_High_Level_Division__c</fullName>
        <formula>TEXT(Owner:User.High_Level_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner High Level Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owners_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owners Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Requestor__c</fullName>
        <formula>Requestor__r.FirstName + &quot; &quot; + Requestor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Audit and Accounting</fullName>
                </value>
                <value>
                    <fullName>Editorial</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Professional Client Services (implementation, training, conversion)</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Case__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Id +&quot;/s?retURL=%2F&quot;+ Id, &quot;Close Case&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>6. Closed Won </fullName>
                </value>
                <value>
                    <fullName>Adding to Suite </fullName>
                </value>
                <value>
                    <fullName>Add-on Sale </fullName>
                </value>
                <value>
                    <fullName>Aspen unpaid book cancel </fullName>
                </value>
                <value>
                    <fullName>Better Price </fullName>
                </value>
                <value>
                    <fullName>CCH Experience</fullName>
                </value>
                <value>
                    <fullName>Change effective dates </fullName>
                </value>
                <value>
                    <fullName>Change in business - Bankrupt </fullName>
                </value>
                <value>
                    <fullName>Change in business - Budget cuts </fullName>
                </value>
                <value>
                    <fullName>Change in business - Business focus change </fullName>
                </value>
                <value>
                    <fullName>Change in business - Personnel change </fullName>
                </value>
                <value>
                    <fullName>Change in business - Went out of business </fullName>
                </value>
                <value>
                    <fullName>Competition - Content / Software issue</fullName>
                </value>
                <value>
                    <fullName>Competition - Platform</fullName>
                </value>
                <value>
                    <fullName>Competition - Price</fullName>
                </value>
                <value>
                    <fullName>Competitive Conversion </fullName>
                </value>
                <value>
                    <fullName>Conversion - Step Down </fullName>
                </value>
                <value>
                    <fullName>Conversion - Step Over </fullName>
                </value>
                <value>
                    <fullName>Conversion - Step Up </fullName>
                </value>
                <value>
                    <fullName>Conversion to Better Solution </fullName>
                </value>
                <value>
                    <fullName>Converted By Mistake</fullName>
                </value>
                <value>
                    <fullName>Correct order entry error </fullName>
                </value>
                <value>
                    <fullName>Credit dept cancel </fullName>
                </value>
                <value>
                    <fullName>Deceased </fullName>
                </value>
                <value>
                    <fullName>Did not renew - Unknown reason </fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Features / Functionality </fullName>
                </value>
                <value>
                    <fullName>Insufficient use - Doesn&apos;t warrant product cost </fullName>
                </value>
                <value>
                    <fullName>Merger with non WK Firm</fullName>
                </value>
                <value>
                    <fullName>Merger with WK Firm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AICPA</fullName>
                </value>
                <value>
                    <fullName>Avalara</fullName>
                </value>
                <value>
                    <fullName>BNA</fullName>
                </value>
                <value>
                    <fullName>Cambridge</fullName>
                </value>
                <value>
                    <fullName>Caseware</fullName>
                </value>
                <value>
                    <fullName>Cengage Learning</fullName>
                </value>
                <value>
                    <fullName>Corptax</fullName>
                </value>
                <value>
                    <fullName>Ichannel</fullName>
                </value>
                <value>
                    <fullName>Intuit - Lacerte</fullName>
                </value>
                <value>
                    <fullName>Intuit - Proseries</fullName>
                </value>
                <value>
                    <fullName>Intuit - Tax Online</fullName>
                </value>
                <value>
                    <fullName>McGraw-Hill</fullName>
                </value>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>Pearson Educational( Formerly PH)</fullName>
                </value>
                <value>
                    <fullName>SurePrep</fullName>
                </value>
                <value>
                    <fullName>Taxware</fullName>
                </value>
                <value>
                    <fullName>Thomson</fullName>
                </value>
                <value>
                    <fullName>Thomson – Ultratax</fullName>
                </value>
                <value>
                    <fullName>Vertex</fullName>
                </value>
                <value>
                    <fullName>Wiley Publishing</fullName>
                </value>
                <value>
                    <fullName>XCM Solution</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Due_Completion_Date__c</fullName>
        <label>Current Due/Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Status_Next_Steps__c</fullName>
        <label>Current Status/Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSM_Email__c</fullName>
        <defaultValue>$User.DSM_Email__c</defaultValue>
        <description>Used as part of Sales Cancellation process</description>
        <label>DSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Closure__c</fullName>
        <formula>ClosedDate -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Closure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Amount__c</fullName>
        <label>Deal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desired_Due_Date__c</fullName>
        <label>Desired Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Software</fullName>
                </value>
                <value>
                    <fullName>Executives</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Global &amp; National Accounts</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Learning</fullName>
                </value>
                <value>
                    <fullName>Sales Operations</fullName>
                </value>
                <value>
                    <fullName>Strategic &amp; Mid-Market</fullName>
                </value>
                <value>
                    <fullName>Solution Design</fullName>
                </value>
                <value>
                    <fullName>Training &amp; Consulting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Editorial_Tax_Type_and_or_State__c</fullName>
        <label>Editorial Tax Type and/or State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Reference_ID__c</fullName>
        <formula>&quot;[ ref:_&quot;+
LEFT( $Organization.Id , 5)+
RIGHT( $Organization.Id , 4)+
&quot;._&quot;+
LEFT( Id , 5) +
RIGHT( Id , 5)+
&quot;:ref ]&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Reference ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emails_Received_Count__c</fullName>
        <description>used to notify case owner of new email</description>
        <label>Emails Received Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <description>SMS-863: this field has been used in Sales integration, please do not delete</description>
        <inlineHelpText>SMS-863: this field has been used in Sales integration, please do not delete</inlineHelpText>
        <label>Escalation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Been_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Been Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Until_Picked_Up__c</fullName>
        <formula>IF(ISBLANK( Time_Picked_Up__c ),NULL,
IF(NOT(ISBLANK( Time_Picked_Up__c )),
ROUND( 8 * (
   ( 5 * FLOOR( ( DATEVALUE( Time_Picked_Up__c ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( Time_Picked_Up__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( Time_Picked_Up__c - DATETIMEVALUE( &apos;1900-01-08 10:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 10:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 ),
ROUND( 8 * (
   ( 5 * FLOOR( ( DATEVALUE( NOW() ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( NOW() ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( NOW() - DATETIMEVALUE( &apos;1900-01-08 10:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 10:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Until Picked Up</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_Acknowledge__c</fullName>
        <defaultValue>&quot;This is a TaxWise prospect who needs to be immediately added to our Database.&quot;</defaultValue>
        <label>I Acknowledge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_with_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merge with Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Data Request Cases</relationshipLabel>
        <relationshipName>Account_Data_Request_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>My_Cases__c</fullName>
        <formula>IF( OR(CreatedBy.Id = $User.Id,  OwnerId =  $User.Id) , TRUE , FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Team__c</fullName>
        <formula>Owner:User.Manager_Full_Name__c = ($User.FirstName + &quot; &quot; + $User.LastName )  || 
( Owner:User.FirstName + &quot; &quot; +  Owner:User.LastName  ) =($User.FirstName + &quot; &quot; + $User.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Team</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>